--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,8 @@ project(shiny-carnival)
 # set(CMAKE_VERBOSE_MAKEFILE true)
 set(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/shiny-carnival/src)
- 
-add_executable(main ${SRC_DIRECTORY}/main.cpp ${SRC_DIRECTORY}/piezo.cpp ${SRC_DIRECTORY}/sensor.cpp ${SRC_DIRECTORY}/pwm.cpp ${SRC_DIRECTORY}/gpio.cpp)
 
-# add the executable
-target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/src)
+add_executable(main ${SRC_DIRECTORY}/main.cpp ${SRC_DIRECTORY}/piezo.cpp ${SRC_DIRECTORY}/sensor.cpp ${SRC_DIRECTORY}/pwm.cpp ${SRC_DIRECTORY}/gpio.cpp ${SRC_DIRECTORY}/socket.cpp)
 
+target_link_libraries(main opencv_core)
+# add_executable(main ${SRC_DIRECTORY}/main.cpp)
