--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,10 @@ project(shiny-carnival)
 set(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/shiny-carnival/src)
 
-add_executable(main ${SRC_DIRECTORY}/main.cpp ${SRC_DIRECTORY}/piezo.cpp ${SRC_DIRECTORY}/sensor.cpp ${SRC_DIRECTORY}/pwm.cpp ${SRC_DIRECTORY}/gpio.cpp ${SRC_DIRECTORY}/socket.cpp ${SRC_DIRECTORY}/camera.cpp)
+add_executable(main ${SRC_DIRECTORY}/main.cpp ${SRC_DIRECTORY}/piezo.cpp ${SRC_DIRECTORY}/sensor.cpp ${SRC_DIRECTORY}/pwm.c ${SRC_DIRECTORY}/gpio.c ${SRC_DIRECTORY}/socket.cpp ${SRC_DIRECTORY}/camera.cpp ${SRC_DIRECTORY}/client.c shiny-carnival/src/client.h shiny-carnival/src/server.cpp shiny-carnival/src/server.h)
 
 SET(OpenCV_DIR /usr/local/include/opencv2/)
 find_package(OpenCV REQUIRED)
 
 include_directories(/usr/local/include/opencv2/)
 target_link_libraries(main pthread ${OpenCV_LIBS})
-# add_executable(main ${SRC_DIRECTORY}/main.cpp)
