change: Change client.c into client.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(shiny-carnival)
 set(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/shiny-carnival/src)
 
-add_executable(main ${SRC_DIRECTORY}/main.cpp ${SRC_DIRECTORY}/piezo.cpp ${SRC_DIRECTORY}/sensor.cpp ${SRC_DIRECTORY}/pwm.c ${SRC_DIRECTORY}/gpio.c ${SRC_DIRECTORY}/socket.cpp ${SRC_DIRECTORY}/camera.cpp ${SRC_DIRECTORY}/client.c shiny-carnival/src/client.h shiny-carnival/src/server.cpp shiny-carnival/src/server.h)
+add_executable(main ${SRC_DIRECTORY}/main.cpp ${SRC_DIRECTORY}/piezo.cpp ${SRC_DIRECTORY}/sensor.cpp ${SRC_DIRECTORY}/pwm.c ${SRC_DIRECTORY}/gpio.c ${SRC_DIRECTORY}/socket.cpp ${SRC_DIRECTORY}/camera.cpp ${SRC_DIRECTORY}/client.cpp ${SRC_DIRECTORY}/client.h ${SRC_DIRECTORY}/server.cpp ${SRC_DIRECTORY}/server.h)
 
 SET(OpenCV_DIR /usr/local/include/opencv2/)
 find_package(OpenCV REQUIRED)
